--- a/browser-extension/package.json
+++ b/browser-extension/package.json
@@ -5,17 +5,31 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "buld": "webpack --mode production",
+    "build": "webpack --mode production",
     "watch": "webpack --watch --progress --config webpack.config.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.25.7",
+    "@babel/preset-env": "^7.25.7",
+    "@babel/preset-react": "^7.25.7",
+    "@solana/web3.js": "^1.95.3",
+    "axios": "^1.7.7",
+    "babel-loader": "^9.2.1",
+    "buffer": "^6.0.3",
     "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^7.1.2",
+    "lodash": "^4.17.21",
+    "postcss-loader": "^8.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
+    "style-loader": "^4.0.0",
+    "webextension-polyfill": "^0.12.0",
     "webpack": "^5.95.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   }
 }
